--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ android:
       - build-tools-24.0.2
       - android-24
       - extra-android-m2repository
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
