--- a/csv/build.gradle
+++ b/csv/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.assertj:assertj-core:3.6.1'
 }
 
 sourceCompatibility = "1.7"
