--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ android:
   components:
       - tools
       - build-tools-25.0.2
+      - build-tools-24.0.2
       - android-25
+      - android-24
       - extra-android-m2repository
 env:
   global:
