--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,13 @@ android {
 
 dependencies {
     compile project(':rxandroidsensor')
+    compile project(':csv')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'io.reactivex:rxjava:1.2.5'
+    compile 'io.reactivex:rxandroid:0.23.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
